HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/AssociatedTypeMissingBinding/Expected.uv
//! Expected diagnostic metadata for the AssociatedTypeMissingBinding rejected-source specimen.

expectedDiagnostic("E-TYP-2503", "req.14.AssociatedTypeAbstractAndDefaultBinding")
